more tree filter options - property filter; default tree filter adjustment